# hgp-lib

./: 404.html  CONTRIBUTING.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-package.yml
api/: index.html
api/algorithms/: index.html
api/benchmarkers/: index.html
api/configs/: index.html
api/crossover/: index.html
api/metrics/: index.html
api/mutations/: index.html
api/populations/: index.html
api/preprocessing/: index.html
api/rules/: index.html
api/selections/: index.html
api/trainers/: index.html
api/utils/: index.html
docs/: getting-started.md  index.md  results.md
docs/api/: algorithms.md  benchmarkers.md  configs.md  crossover.md  index.md  metrics.md  mutations.md  populations.md  preprocessing.md  rules.md  selections.md  trainers.md  utils.md
getting-started/: index.html
hgp_lib/: __init__.py
hgp_lib/algorithms/: __init__.py  boolean_gp.py  metrics.py  multiclass_gp.py
hgp_lib/benchmarkers/: __init__.py  config.py  gp_benchmarker.py  progress.py  results.py  runner.py
hgp_lib/configs/: __init__.py  benchmarker_config.py  boolean_gp_config.py  trainer_config.py
hgp_lib/crossover/: __init__.py  crossover_executor.py  crossover_factory.py  stub.py
hgp_lib/metrics/: __init__.py  core.py  history.py  results.py
hgp_lib/metrics/visualization/: optuna.py  plots.py
hgp_lib/mutations/: __init__.py  base_mutation.py  default_mutation_executor.py  literal_mutations.py  mutation_executor.py  mutation_factory.py  operator_mutations.py  utils.py
hgp_lib/populations/: __init__.py  base_strategy.py  generator.py  populations_factory.py  sampling.py  simple_population.py  strategies.py
hgp_lib/populations/initializers/: greedy_subset_initializer.py  population_initializer.py  random_initializer.py
hgp_lib/populations/mutations/: default_mutation_executor.py  standard_mutations.py  utils.py
hgp_lib/populations/utils/: integrity_checker.py
hgp_lib/preprocessing/: __init__.py  binarizer.py  utils.py
hgp_lib/rules/: __init__.py  literals.py  low_memory_operators.py  operators.py  rules.py  utils.py
hgp_lib/selections/: __init__.py  base_selection.py  roulette_selection.py  stub.py  tournament_selection.py
hgp_lib/trainers/: __init__.py  gp_trainer.py
hgp_lib/utils/: __init__.py  benchmarking.py  metrics.py  trial_details.py  validation.py  visualization.py
hgp_lib_old/mutations/: standard_mutations.py
hgp_lib_old/populations/: simple_population.py
hgp_lib_old/rules/: rules.py
hyperparameter_configs/: default.yaml
results/: index.html
scripts/: optuna_hypertuning.py  paysim_benchmark.py  paysim_latency.py  paysim_preprocess.py  paysim_profile.py  paysim_trainer_profile.py  plot_pmlb_comparison.py  pmlb_preprocess.py  profile_trainer.py  run_benchmark.py  run_on_pmlb.py
scripts/hypertuning/: __init__.py  search_space.py
scripts/preprocess/: paysim_preprocess.py  pmlb_preprocess.py
scripts/visualization/: __init__.py  optuna.py  plots.py
search/: search_index.json
tests/: test_binarizer.py  test_binerizer.py  test_boolean_gp.py  test_configs.py  test_crossover.py  test_gp_benchmarker.py  test_gp_trainer.py  test_hierarchical_gp.py  test_history.py  test_literal_mutations.py  test_metrics_core.py  test_mutation_executor.py  test_mutation_factory.py  test_mutations.py  test_operator_mutations.py  test_population_initializers.py  test_populations.py  test_preprocessing_utils.py  test_progress.py  test_results.py  test_rules.py  test_rules_utils.py  test_sampling.py  test_selections.py  test_utils_metrics.py  test_utils_validation.py  test_visualization_plots.py
(+3 files in other folders)
