[project]
name = "hgp-lib"
version = "0.0.1"
requires-python = ">=3.10"
description = "" # TODO
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "George Stoica", email = "george.stoica@info.uaic.ro"},
]
maintainers = [
    { name = "George Stoica", email = "george.stoica@info.uaic.ro"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",  # TODO: APACHE licence or MIT
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
# TODO
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "optuna",
    "optuna-dashboard"
]
[tool.setuptools.packages.find]
include = ["hgp_lib*"]

[project.urls]
Repository = "https://github.com/fii-optim-lab/hgp-lib"
Issues = "https://github.com/fii-optim-lab/hgp-lib/issues"


[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]
dev = [
    "pytest",
    "flake8",
    "ruff",
]
