[project]
name = "hgp-lib"
version = "0.0.1"
requires-python = ">=3.10"
description = "hgp-lib: Hierarchical Genetic Programming Library for Generating Boolean Rules from Tabular Data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ramona-Georgiana Albert", email = "george.stoica@info.uaic.ro"},
    { name = "George Stoica", email = "ramona-georgiana.albert@info.uaic.ro"},
]
maintainers = [
    { name = "Ramona-Georgiana Albert", email = "george.stoica@info.uaic.ro"},
    { name = "George Stoica", email = "ramona-georgiana.albert@info.uaic.ro"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
keywords = [
# TODO
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "optuna",
    "optuna-dashboard",
    "matplotlib",
    "scikit-learn",
]
[tool.setuptools.packages.find]
include = ["hgp_lib*"]

[project.urls]
Repository = "https://github.com/fii-optim-lab/hgp-lib"
Issues = "https://github.com/fii-optim-lab/hgp-lib/issues"


[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-material",
    "pytest",
    "flake8",
    "ruff",
    "seaborn",
    "tables",
    "prettytable",
    "timed-decorator",
]
[tool.ruff]
exclude = [".venv"]
